Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44413

[REG 5.3->5.4] qmake VS2013 project files generation with Flat mode is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.2
    • 5.4.0
    • Build tools: qmake
    • None
    • Windows 7 x64, MS VS 2013
    • f90c1860580bcbe6b898ceb86cdd746532470c64

      Ticket created based on E-Mail conversation with Joerg Bornemann

      There is a difference in a way how qmake generates Visual Studio project files and filters between qmake 5.3 and 5.4.

      I am using CONFIG -= flat mode, to get a hierarchy in the solution explorer and it used to work fine for years, but since 5.4 for all headers containing QObject based classed (involving custom build step), there is a wrong path in the filter folder, which leads to situation where in the resulted project there are proper folders in headers section but they are all empty (except non QObject headers), and rest of headers in the root of Headers like in a flat mode.

      Main difference encountered is:

      Version 5.3
      <ItemGroup> <CustomBuild Include=”..\\common\\contacts\\xcontact.h”> 
      <Filter>Header Files\..\common\contacts</Filter> </CustomBuild> </ItemGroup>
      
      Version 5.4
      <ItemGroup> <CustomBuild Include=”..\\common\\contacts\\xcontact.h”> 
      <Filter>Header Files</Filter> </CustomBuild> </ItemGroup>
      

      as you may see <Filter> tag in 5.4 doesn’t contains a full path relative to "Header Files”. I had a look breifly through the source code, but didn’t saw obvious changes which leads to such result. I will be happy to provide you sample of .pro as well as resulted vcproj and filters if you need.

      example.zip contains same project generated with 5.3 and 5.4 qmake

        1. example.zip
          29 kB
        2. non_flat.png
          non_flat.png
          20 kB
        3. sample.pro
          7 kB
        4. sample.pro
          7 kB
        For Gerrit Dashboard: QTBUG-44413
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            evilruff Yuri Alexandrov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes